--- a/jenkins-job/jenkin-job-test.yml
+++ b/jenkins-job/jenkin-job-test.yml
@@ -19,4 +19,4 @@
           permit-all: true
     builders:
       - shell: |
-         ansible-playbook -i hosts -v deploy.yml 
+         ansible-playbook -i hosts -v deploy.yml -u ubuntu 
