--- a/jenkins-job/jenkin-job-test.yml
+++ b/jenkins-job/jenkin-job-test.yml
@@ -12,6 +12,8 @@
       - git:
           url: https://github.com/ankurgarg21/hello-world-service.git
           refspec: '+refs/pull/*:refs/remotes/origin/pr/*'
+          branches:
+           - origin/master
 
     triggers:
       - github-pull-request:
